# integral_types

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
src/integral_types/: integral_types.hpp
tests/: CMakeLists.txt  cxx_std_11.test.cpp  cxx_std_14.test.cpp  cxx_std_17.test.cpp  cxx_std_20.test.cpp  cxx_std_23.test.cpp
